Fix Arcade page images, add UAE to community page

--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -16,23 +16,23 @@ import "react-medium-image-zoom/dist/styles.css";
 <div style={{ textAlign: "center" }}>
 
 <Zoom>
-<img alt="Main" width="75%" src="/img/catalog/arcade-v2-front.jpg" />
+<img alt="Main" width="75%" src="/img/catalog/arcade-v2-front.png" />
 </Zoom>
 
   <table>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/arcade-v2-back.jpg" />
+        <img alt="Back" src="/img/catalog/arcade-v2-back.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Size" src="/img/catalog/arcade-v2-clip.jpg" />
+        <img alt="Size" src="/img/catalog/arcade-v2-circuits.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Front" src="/img/catalog/arcade-v2-front45.jpg" />
+        <img alt="Front" src="/img/catalog/arcade-v2-front45.png" />
       </Zoom>
     </td>
     <td>
@@ -55,7 +55,6 @@ import "react-medium-image-zoom/dist/styles.css";
 • Microsoft MakeCode Arcade Ready.<br/>
 • 1.8″ 160×120 Color Display.<br/>
 • Jacdac Connector.<br/>
-• DUELink Connector.<br/>
 • Alligator-Clip Pads to Connect Circuits.<br/>
 • Buzzer Speaker.<br/>
 • 8x User Buttons.<br/>
@@ -80,27 +79,49 @@ import "react-medium-image-zoom/dist/styles.css";
 
 ## MakeCode Arcade
 
-![MakeCode Arcade](pathname:///img/makecode-arcade.jpg)
+Create games with an Internet browser using Microsoft MakeCode Arcade. Program in Blocks, JavaScript, or Python. Download finished games to the BrainPad Arcade over USB, and play them on the hand-held device.
 
-Create games with an Internet browser using Microsoft MakeCode Arcade. Program in Blocks, JavaScript, or Python.
 
-![Falling Duck](pathname:///img/falling-duck.gif)
+<div style={{ textAlign: "center" }}>
 
-Download finished games to the BrainPad Arcade over USB, and play them on the hand-held device.
+  <table>
+    <td width='33%'>
+        ![MakeCode Arcade](pathname:///img/makecode-arcade.jpg)
+    </td>
+    <td width='33%'>
+       ![Falling Duck](pathname:///img/falling-duck.gif)
 
-![Falling Duck Play](pathname:///img/arcade-duck-play.jpg)
+    </td>
+    <td width='33%'>
+       ![Falling Duck Play](pathname:///img/arcade-duck-play.jpg)
+
+    </td>
+  </table>
+</div>
 
 ---
 
 ## Power On-the-go!
 
-BrainPad Arcade can be powered using any phone charger or power bank.
+BrainPad Arcade can be powered using any phone charger or power bank. The BrainPower backpack is another elegant option for powering BrainPad Arcade. See [BrainPower](brainpower) page to learn more.
 
-image
+<div style={{ textAlign: "center" }}>
 
-The BrainPower backpack is another elegant option for powering BrainPad Arcade. See [BrainPower](brainpower) page to learn more.
+  <table>
+    <td width='50%'>
+        ![Arcade Powerbank](pathname:///img/power-on-the-go.png)
+    </td>
+    <td width='50%'>
+       ![BrainPower](pathname:///img/brainpower-arcade.png)
 
-![BrainPower](pathname:///img/catalog/brainpower-arcade-front45.jpg)
+    </td>
+  </table>
+</div>
+
+
+
+
+
 
 ---
 
