--- a/src/pages/community.mdx
+++ b/src/pages/community.mdx
@@ -100,6 +100,16 @@ The Detroit Pistons STEAM slam is a regular hosted event for a high energy day o
 
 
 ---
+# UAE government - Dubai, Abu Dhabi, and Sharjah
+
+![Ballarpur](pathname:///img/partner-dubai.png)
+
+The UAE government has been leading the way in STEM and AI education. BrainPad is glad to be part of this initiative in mulitple organization including Dubai Culture, Dubai Public Library, School Of Life, Sharjah Research and Technology Park, and Khalifa Park - Abu Dhabi
+
+---
+
+
+
 
 # Everbest Media – Malaysia
 
