--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -19,7 +19,7 @@ import "react-medium-image-zoom/dist/styles.css";
 <table>
 <td>
     <Zoom>
-    <img alt="arcade" src="/img/catalog/arcade-v2-front.jpg" />
+    <img alt="arcade" src="/img/catalog/arcade-v2-front.png" />
     </Zoom>
     Microcomputer with Color Screen 
     <Button
