--- a/docs/resources/intro.mdx
+++ b/docs/resources/intro.mdx
@@ -13,7 +13,7 @@ import TabItem from "@theme/TabItem";
 
   <table>
     <td width='50%'>
-        <img alt="Back" src="/img/catalog/arcade-v2-front.jpg" />
+        <img alt="Back" src="/img/catalog/arcade-v2-front.png" />
         Use Make Code arcade with BrainPad Arcade.
         <Button  style={{ margin: "10px" }}  label="MakeCode Arcade"  link="makecode-arcade"/>
     </td>
