--- a/docs/catalog/brainclip.mdx
+++ b/docs/catalog/brainclip.mdx
@@ -26,7 +26,7 @@ import "react-medium-image-zoom/dist/styles.css";
     </td>
     <td>
       <Zoom>
-        <img alt="Size" src="/img/catalog/arcade-v2-clip.jpg" />
+        <img alt="Size" src="/img/catalog/arcade-v2-clip.png" />
       </Zoom>
     </td>
     <td>
