--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -9,7 +9,7 @@ hide_table_of_contents: true
 
 BrainPad is a STEM coding platform, not a toy, though you can still <strong>PLAY</strong>. Understanding <strong>CODE</strong> is essential to <strong>EXCEL</strong> in this digitally transformed era.
 
-![BrainPad Arcade](pathname:///img/catalog/arcade-v2-front.jpg)
+![BrainPad Arcade](pathname:///img/catalog/arcade-v2-front.png)
 
 We offer coding platform with an enhanced technological learning experience that is gratifying and accessible to all ages and backgrounds through our educational devices and coding events.
 
