complete the buy page

--- a/src/pages/buy.mdx
+++ b/src/pages/buy.mdx
@@ -5,9 +5,42 @@ hide_table_of_contents: true
 
 <div style={{display: 'block',  justifyContent: 'center', alignItems: 'center', textAlign: 'center'}}>
 
-# Ordering
+# Buying Options
 
-Coming soon!
+**BrainPad products are available at these fine distributors**
+
+
+<table>
+  <td width='25%'>
+      <img alt="Back" src="/img/logo-digikey.jpg" />
+      
+      <Button  style={{ margin: "10px" }}  label="DigiKey Electronics"  link="https://www.digikey.com/"/>
+      ---
+      Direct Links: [BrainPad Arcade V1](https://www.digikey.com/en/products/detail/ghi-electronics-llc/BRAINPAD-AR1/10057182), [BrainPad Pulse](https://www.digikey.com/en/products/detail/ghi-electronics-llc/BPC-PULSE-D/15851391), [BrainBot](https://www.digikey.com/en/products/detail/ghi-electronics-llc/BPK-BOT-2/15851388), [BrainClip](https://www.digikey.com/en/products/detail/ghi-electronics-llc/BPK-CLIP-2/15851389), [BrainPower](https://www.digikey.com/en/products/detail/ghi-electronics-llc/BPK-POWER-2/15851390).
+  
+  </td>
+  <td width='25%'>
+      <img alt="Size" src="/img/logo-mouser.jpg" />
+
+      <Button  style={{ margin: "10px" }}  label="Mouser Electronics"  link="https://www.mouser.com/"/>
+      ---
+      Direct Links:  [BrainPad Arcade V1](https://www.mouser.com/ProductDetail/GHI-Electronics/BRAINPAD-AR1?qs=vLWxofP3U2yOBamkqkewZw%3D%3D), [BrainPad Pulse](https://www.mouser.com/ProductDetail/GHI-Electronics/BPC-PULSE-D?qs=sGAEpiMZZMv0NwlthflBi8ta9pA8AH6ZiSYtvwb%252B0Ic%3D), [BrainBot](https://www.mouser.com/ProductDetail/GHI-Electronics/BPK-BOT-2?qs=sGAEpiMZZMv0NwlthflBi4HYGPfvOu2dGwihG%2FBYBO8%3D), [BrainClip](https://www.mouser.com/ProductDetail/GHI-Electronics/BPK-CLIP-2?qs=Rp5uXu7WBW9RNqOwHYoCKw%3D%3D), [BrainPower](https://www.mouser.com/ProductDetail/GHI-Electronics/BPK-POWER-2?qs=Rp5uXu7WBW%2FARGam2RklTg%3D%3D).
+  </td>
+  <td width='25%'>
+      <img alt="Size" src="/img/logo-everbestmedia.jpg" />
+
+      <Button  style={{ margin: "10px" }}  label="Everbest Media"  link="https://everbestmedia.com/"/>
+      ---
+      Direct Links: [BrainPad Arcade V1](https://www.everbestmedia.com/product-page/brainpad-arcade), [BrainPad Pulse](https://www.everbestmedia.com/product-page/brainpad-pulse), [BrainBot](https://www.everbestmedia.com/product-page/brainpad-brainbot), [BrainClip](https://www.everbestmedia.com/product-page/brainpad-brainclip), [BrainPower](https://www.everbestmedia.com/product-page/brainpad-brainpower).
+  </td>
+  <td width='25%'>
+      <img alt="Size" src="/img/logo-amazon.jpg" />
+
+      <Button  style={{ margin: "10px" }}  label="Amazon"  link="https://www.amazon.com/"/>
+      ---
+      Direct Links: [BrainPad Store](https://www.amazon.com/stores/BrainPad/page/1A5054B8-4BFA-4304-90B7-B0081095F29E)
+  </td>
+</table>
 
 ---
 
