add learn to code things banner

--- a/src/pages/impact.mdx
+++ b/src/pages/impact.mdx
@@ -11,6 +11,8 @@ hide_table_of_contents: true
 
 STEM requires an evolving platform, not a toy, though you can still `PLAY`. BrainPad has been on a mission for years to excite everyone about understanding the digital world. Understanding technology and `CODE` is becoming part of every industry, and our daily lives. Learners can use the acquired knowledge to help them `EXCEL` in any field of study.
 
+![pulse](pathname:///img/learn-to-code-things.png)
+
 Let us show you how BrainPad **Empowers Eductors**, **Excites Learners**, and **Impacts Communities**.
 
 ---
