add assembly instructions hide brainsense hide braingamer

--- a/docs/catalog/brainbot.mdx
+++ b/docs/catalog/brainbot.mdx
@@ -49,6 +49,8 @@ import "react-medium-image-zoom/dist/styles.css";
 
 BrainBot includes everything needed to get you started on coding robots. It works hand in hand with the lesson plans and give users options, from newbies to experts. Minor assembly is required.
 
+See [Assembly Instructions](../resources/brainbot-instructions).
+
 <table><td width='50%'>
 **Key features**
 
