--- a/docs/catalog/brainpower.mdx
+++ b/docs/catalog/brainpower.mdx
@@ -48,6 +48,8 @@ import "react-medium-image-zoom/dist/styles.css";
 
 Take your Arcade on-the-go with this rechargeable battery option. It includes a haptic-feedback vibrating  motor. But wait, this power “backpack” can turn your Arcade into a badge or a giant wrist watch! 
 
+See [Assembly Instructions](../resources/brainpower-instructions).
+
 <table><td width='50%'>
 **Key features**
 
