add direct link to amazon

--- a/docs/catalog/arcade.mdx
+++ b/docs/catalog/arcade.mdx
@@ -63,8 +63,8 @@ import "react-medium-image-zoom/dist/styles.css";
 </td><td width='50%'>
 **Resources**
 
-📄[Schematics](pathname:///sch/gdl-acfan-b.pdf)<br/>
-🔩[3D STEP file](pathname:///3d/gdl-acfan-b.step)<br/>
+📄[MakeCode Arcade Resources](../resources/makecode-arcade)
+
 </td></table>
 
 <div class="videocontainer">
