--- a/src/pages/buy.mdx
+++ b/src/pages/buy.mdx
@@ -36,9 +36,9 @@ hide_table_of_contents: true
   <td width='25%'>
       <img alt="Size" src="/img/logo-amazon.jpg" />
 
-      <Button  style={{ margin: "10px" }}  label="Amazon"  link="https://www.amazon.com/"/>
+      <Button  style={{ margin: "10px" }}  label="Amazon"  link="https://www.amazon.com/stores/BrainPad/page/1A5054B8-4BFA-4304-90B7-B0081095F29E?maas=maas_adg_CE6BCFAF1E46F8D16ABDA395F01FD7C5_afap_abs&ref_=aa_maas&tag=maas&th=1"/>
       ---
-      Direct Links: [BrainPad Store](https://www.amazon.com/stores/BrainPad/page/1A5054B8-4BFA-4304-90B7-B0081095F29E)
+      Direct Links: [BrainPad Arcade V2](https://www.amazon.com/dp/B0CL4ZCN53?maas=maas_adg_CE6BCFAF1E46F8D16ABDA395F01FD7C5_afap_abs&ref_=aa_maas&tag=maas&th=1), [BrainPad Arcade V1](https://www.amazon.com/dp/B07VZF4SPY?maas=maas_adg_CE6BCFAF1E46F8D16ABDA395F01FD7C5_afap_abs&ref_=aa_maas&tag=maas), [BrainPad Pulse](https://www.amazon.com/dp/B0BBSDZ8PN?maas=maas_adg_B4CFCBDED06BBDA86A63E34DA3FDE72A_afap_abs&ref_=aa_maas&tag=maas), [BrainBot w/ Pulse](https://www.amazon.com/dp/B0BBSFQQPH?maas=maas_adg_A5262E4D176DEECF0CBC90B09C9D7ADF_afap_abs&ref_=aa_maas&tag=maas), [BrainClip w/ Pulse](https://www.amazon.com/dp/B0BBSH8YQN?maas=maas_adg_39E527B30D48FBE44FB924DE88668DB7_afap_abs&ref_=aa_maas&tag=maas).
   </td>
 </table>
 
