Update brainclip page

--- a/docs/catalog/brainclip.mdx
+++ b/docs/catalog/brainclip.mdx
@@ -31,7 +31,8 @@ import "react-medium-image-zoom/dist/styles.css";
     </td>
     <td>
       <Zoom>
-        <img alt="Front" src="/img/catalog/brainclip-modules.jpg" />
+        <img alt="Front" src="/img/catalog/brainclip-modules.png" />
+        
       </Zoom>
     </td>
     <td>
