--- a/docs/catalog/brainclip.mdx
+++ b/docs/catalog/brainclip.mdx
@@ -32,12 +32,12 @@ import "react-medium-image-zoom/dist/styles.css";
     <td>
       <Zoom>
         <img alt="Front" src="/img/catalog/brainclip-modules.png" />
-        
+
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/brainclip-all.png" />
+        <img alt="Back" src="/img/catalog/clip-case.png" />
       </Zoom>
     </td>
   </table>
