--- a/docs/catalog/intro.mdx
+++ b/docs/catalog/intro.mdx
@@ -31,9 +31,9 @@ import "react-medium-image-zoom/dist/styles.css";
 <td>
     <Zoom>
 
-    <img alt="brainclip" src="/img/catalog/arcade-v2-clip.jpg" />
+    <img alt="brainclip" src="/img/catalog/arcade-v2-clip.png" />
     </Zoom>
-    Alligator Clip Sensor Kit
+    Alligator Clip Friendly Sensor Kit
 
     <Button
     style={{ margin: "10px" }}
