--- a/docs/resources/lessons/sound-sense.mdx
+++ b/docs/resources/lessons/sound-sense.mdx
@@ -2,12 +2,11 @@
 
 In this lesson, students will learn about Sound sensor and how to deal with is using BrainPad Arcade
 
-![Sound Sense](pathname:///img/res/arcade/sound-sense.gif)
-
+![Sound Sense](pathname:///img/res/arcade/sound-sensing.png)
 
 ## Setup
 
-You will need any computer with a modern internet connection. Windows, Mac, and even Chromebook will work!
+You will need any computer with a modern Internet connection. Windows, Mac, and even Chromebook will work!
 
 You will need some sensors from the [BrainClip](../../catalog/brainclip) kit, And you need to finish the [Edge Pads](/docs/resources/lessons/edge-pads) project.
 
