--- a/docs/catalog/brainpower.mdx
+++ b/docs/catalog/brainpower.mdx
@@ -27,17 +27,17 @@ import "react-medium-image-zoom/dist/styles.css";
     </td>
     <td>
       <Zoom>
-        <img alt="Size" src="/img/catalog/brainpower-arcade-front45.jpg" />
+        <img alt="Size" src="/img/catalog/brainpower-arcade.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Front" src="/img/catalog/brainpower-front45.png" />
+        <img alt="Front" src="/img/catalog/brainpower-pulse.png" />
       </Zoom>
     </td>
     <td>
       <Zoom>
-        <img alt="Back" src="/img/catalog/brainpower-arcade.jpg" />
+        <img alt="Back" src="/img/catalog/brainpower-case.png" />
       </Zoom>
     </td>
   </table>
